PUT with OptimisticLockException for Bookstore